--- a/config.conf
+++ b/config.conf
@@ -2,20 +2,20 @@
 #开始在一起的日期，格式参考 2022-06-24
 start_date=2022-06-24
 #你女朋友所在的城市，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city1=昆明
+city1=合肥
 #你女朋友的家乡，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city2=腾冲
+city2=淮南
 #你女朋友的生日，注意格式只写*月*日 如："07-21"
-birthday_lover=07-21
+birthday_lover=11-16
 #你的生日,注意格式只写*月*日 如："07-21"
-birthday_my=05-04
+birthday_my=03-08
 #以下为微信测试号的参数，在申请时会显示
-app_id=wxbc471cb
-app_secret=c4149ff570
+app_id=wx777b26eb34cf0e58
+app_secret=5e81885214eb2ec9f71e7c62071e16b8
 #消息模板ID，在微信测试号中添加模板会自动生成ID
-template_id=o_H3x859-mrYPv2ynphC
+template_id=gp2gvkfBgXxFFOgaQplscFlcHBByexAkpWprzkdvYhQ
 #接收消息的用户ID，让你的女朋友扫微信测试号的二维码，获取微信用户ID
-user_id=oB3
+user_id=oRPdj6sjbwbI3X5c-fSYQqQfBuls
 #如有多个女朋友或者女朋友有多个微信，请使用以下格式,","隔开
 #user_id=****,***,*****
 
